--- a/.github/workflows/continue-on-error.yaml
+++ b/.github/workflows/continue-on-error.yaml
@@ -15,7 +15,7 @@ jobs:
           exit 1
 
   run_on_failure_job:
-    runs-on: ubuntu-latest]
+    runs-on: ubuntu-latest
     needs: [failing_job]
     if: failure()
     steps:
