--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -13,5 +13,9 @@ jobs:
         with:
           fetch-depth: 0
       - name: Hello
+        id: hello
         run: |
             python print_message.py
+      - name: Display Hello
+        run: |
+            echo "${{ steps.hello.outputs.message }}""
