Fix duplicated quote.

--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -18,4 +18,4 @@ jobs:
             python print_message.py
       - name: Display Hello
         run: |
-            echo "${{ steps.hello.outputs.message }}""
+            echo "${{ steps.hello.outputs.message }}"
