--- a/.github/workflows/continue-on-error.yaml
+++ b/.github/workflows/continue-on-error.yaml
@@ -14,6 +14,10 @@ jobs:
         run: |
           echo "This job is failing..."
           exit 1
+      
+      - name: Run on fail
+        run: |
+          echo "This is running in response to a previous step failure..."
 
   run_on_failure_job:
     runs-on: ubuntu-latest
