--- a/.github/workflows/continue-on-error.yaml
+++ b/.github/workflows/continue-on-error.yaml
@@ -24,7 +24,7 @@ jobs:
   run_on_failure_job:
     runs-on: ubuntu-latest
     needs: [failing_job]
-    if: failure()
+    if: failure() && needs.failing_job.result == 'failure'
     steps:
         - name: Acknowledge run
           run: |
